<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_16">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blood_pressure_more_details_title"
        style="@style/Title_Style"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_16"
        android:paddingBottom="@dimen/padding_16"
        android:weightSum="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ideal_blood_pressure_in_blood_pressure_details"
            android:layout_weight="1"
            style="@style/Field_Section_Title"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/green_blood_pressure"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_16"
        android:weightSum="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_pressure_in_blood_pressure_details"
            android:layout_weight="1"
            style="@style/Field_Section_Title"/>

        <View
            android:id="@+id/current_blood_pressure_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue_blood_pressure"/>

    </LinearLayout>

    <com.github.mikephil.charting.charts.CombinedChart
        android:id="@+id/blood_pressure_details_chart"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="@dimen/padding_16"
        android:layout_marginBottom="@dimen/padding_16" />

    <Button
        android:id="@+id/go_back_button"
        style="@style/Dark_Button_Style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_back_button_text" />

</LinearLayout>