<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/blood_pressure_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="340dp"
    android:padding="@dimen/padding_16"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_data_title"
        android:gravity="center"
        style="@style/Title_Style"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/systolic_field_title"
            android:layout_weight="1"
            style="@style/Field_Section_Title"/>

        <EditText
            android:id="@+id/systolic_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_16"
        android:weightSum="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/systolic_field_title"
            android:layout_weight="1"
            style="@style/Field_Section_Title"/>

        <EditText
            android:id="@+id/diastolic_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType = "number"/>
    </LinearLayout>



    <Button
        android:id="@+id/add_blood_pressure_button"
        android:text="@string/add_new_blood_pressure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Dark_Button_Style"/>
</LinearLayout>