<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".screens.bloodPressure.BloodPressureActivity">

    <LinearLayout
        android:id="@+id/account_name_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/padding_16"
        android:background="@drawable/white_button_background_enabled"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/account_full_name"
            style="@style/Title_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_16"
            android:paddingEnd="0dp"/>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/padding_16"
            android:background="@drawable/i_icon"
            android:backgroundTint="@color/dark_primary" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/actions_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:paddingBottom="@dimen/padding_16"
        app:layout_constraintTop_toBottomOf="@id/account_name_holder">

        <Button
            android:id="@+id/clear_all_action"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/delete_data_button_text"
            style="@style/Dark_Button_Style"/>

        <Button
            android:id="@+id/add_blood_pressure_action"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add_new_blood_pressure"
            style="@style/White_Button_style"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/blood_pressure_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/actions_holder">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/systolic_field_title"
            android:textAlignment="center"
            style="@style/Field_Section_Title_Bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/diastolic_field_title"
            android:textAlignment="center"
            android:textColor="@color/dark_primary"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_of_past_bp_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/blood_pressure_title" />
</androidx.constraintlayout.widget.ConstraintLayout>